[gd_scene load_steps=8 format=3 uid="uid://dyn16p2rerab7"]

[ext_resource type="Texture2D" uid="uid://code7vdwtlj71" path="res://mini-games/towers-of-hanoi/3.png" id="1_j3x0g"]
[ext_resource type="Script" path="res://mini-games/towers-of-hanoi/towers_of_hanoi.gd" id="1_we186"]
[ext_resource type="Texture2D" uid="uid://dkwvk5m3axfg8" path="res://assets/nochar.png" id="2_bh50j"]
[ext_resource type="Texture2D" uid="uid://bjtdhfiilxfiq" path="res://mini-games/towers-of-hanoi/2.png" id="2_ruvqu"]
[ext_resource type="AudioStream" uid="uid://bhcw0bdpvuess" path="res://assets/towers-of-hanoi/disk-click.mp3" id="6_380vk"]
[ext_resource type="PackedScene" uid="uid://c4kxd0os4osfn" path="res://mini-games/towers-of-hanoi/disk.tscn" id="7_damca"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cj76h"]
size = Vector2(122.5, 219.5)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_we186")

[node name="tower_1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tower_1"]
modulate = Color(0.0226379, 0.707563, 0.766159, 1)
position = Vector2(431.75, 304.25)
shape = SubResource("RectangleShape2D_cj76h")

[node name="Sprite2D" type="Sprite2D" parent="tower_1"]
position = Vector2(677, 364)
scale = Vector2(5, 5)
texture = ExtResource("2_bh50j")

[node name="tower_2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tower_2"]
modulate = Color(0.0226379, 0.707563, 0.766159, 1)
position = Vector2(554, 304)
shape = SubResource("RectangleShape2D_cj76h")

[node name="Sprite2D" type="Sprite2D" parent="tower_2"]
position = Vector2(552, 364)
scale = Vector2(5, 5)
texture = ExtResource("2_bh50j")

[node name="tower_3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tower_3"]
modulate = Color(0.0226379, 0.707563, 0.766159, 1)
position = Vector2(677, 304)
shape = SubResource("RectangleShape2D_cj76h")

[node name="Sprite2D" type="Sprite2D" parent="tower_3"]
position = Vector2(429, 362)
scale = Vector2(5, 5)
texture = ExtResource("2_bh50j")

[node name="disk_1" parent="." instance=ExtResource("7_damca")]
position = Vector2(431, 263)
scale = Vector2(5, 5)

[node name="disk_2" parent="." instance=ExtResource("7_damca")]
position = Vector2(431, 323)
scale = Vector2(5, 5)
texture = ExtResource("2_ruvqu")

[node name="disk_3" parent="." instance=ExtResource("7_damca")]
position = Vector2(431, 384)
scale = Vector2(5, 5)
texture = ExtResource("1_j3x0g")

[node name="click_sound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_380vk")
